--- a/views/stylesheets/screen.css
+++ b/views/stylesheets/screen.css
@@ -1,81 +1,83 @@
-/* line 12, ../sass/screen.scss */
+/* line 14, ../sass/screen.scss */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* line 18, ../sass/screen.scss */
+/* line 20, ../sass/screen.scss */
 body {
-  background-color: black;
+  background-color: white;
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 .generic-button {
   width: 90px;
   padding: 7px;
   border: none;
+  border-radius: 3px;
   font-size: 0.7em;
   color: white;
   background-color: #373F51;
 }
-/* line 38, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 .generic-button:hover {
   cursor: pointer;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 .danger-button {
   width: 90px;
   padding: 7px;
   border: none;
+  border-radius: 3px;
   font-size: 0.7em;
   color: white;
   background-color: #F05D5E;
 }
-/* line 38, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 .danger-button:hover {
   cursor: pointer;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 .ok-button {
   width: 90px;
   padding: 7px;
   border: none;
+  border-radius: 3px;
   font-size: 0.7em;
   color: white;
   background-color: #0F7173;
 }
-/* line 38, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 .ok-button:hover {
   cursor: pointer;
 }
 
-/* line 51, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 .menu-bar {
   color: #404040;
   padding: 10px;
   margin: 0 0 30px 0;
-  background-color: white;
-  opacity: 0.9;
+  background-color: #E3E3E3;
 }
-/* line 57, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 .menu-bar h3 {
   margin: 0;
 }
 
-/* line 62, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 .sizer {
   margin: 0 auto;
   width: 100%;
   max-width: 900px;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 #login-button {
   width: 90px;
   font-family: 'Open Sans', sans-serif;
@@ -83,78 +85,83 @@ body {
   font-size: 0.8em;
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 .space-between-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-/* line 81, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 .content {
-  background-color: white;
-  opacity: 0.9;
+  background-color: #E3E3E3;
   padding: 10px;
+  border-radius: 5px;
 }
 
-/* line 87, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 .gallerite {
-  margin: 5px;
-  padding: 5px;
-  border: 1px solid gray;
+  background-color: white;
+  margin: 15px 5px 15px 5px;
+  padding: 8px;
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
+  font-size: 0.85em;
+  box-shadow: 5px 5px 5px gray;
 }
-/* line 92, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 .gallerite img {
   width: 100%;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 .description {
   text-align: center;
 }
 
-/* line 101, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .type-header {
   margin: 10px 0 10px 0;
   background-color: gray;
   padding: 5px;
   color: white;
+  border-radius: 5px;
 }
-/* line 106, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 .type-header:hover {
   cursor: pointer;
 }
 
-/* line 111, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 input {
   width: 220px;
   margin: 10px 0 10px 0;
   padding: 5px;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 123, ../sass/screen.scss */
 .main-hr {
   margin: 10px 0 10px 0;
 }
 
-/* line 121, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 .minor-hr {
   margin: 5px 0 5px 0;
 }
 
-/* line 125, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 .new-gallerite-form {
   display: none;
 }
 
-/* line 129, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 .error-message {
   background-color: #F05D5E;
   color: white;
   padding: 3px;
 }
 
-/* line 135, ../sass/screen.scss */
+/* line 141, ../sass/screen.scss */
 .adder {
   display: flex;
   flex-wrap: wrap;
@@ -162,14 +169,14 @@ input {
   font-size: 0.8em;
   color: #404040;
 }
-/* line 141, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 .adder img {
   width: 40px;
   height: 40px;
   margin-right: 5px;
 }
 
-/* line 148, ../sass/screen.scss */
+/* line 154, ../sass/screen.scss */
 .likes-section {
   display: flex;
   flex-wrap: wrap;
@@ -177,67 +184,67 @@ input {
   justify-content: space-between;
 }
 
-/* line 155, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 .like-button, .explore-button, .unlike-button, .delete-button {
   color: white;
   border: none;
   border-radius: 3px;
   padding: 5px;
 }
-/* line 160, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .like-button:hover, .explore-button:hover, .unlike-button:hover, .delete-button:hover {
   cursor: pointer;
 }
 
-/* line 165, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 .like-button {
   background-color: #0F7173;
 }
 
-/* line 169, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .explore-button, .delete-button {
   margin-top: 5px;
   width: 100%;
 }
 
-/* line 174, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 .explore-button {
   background-color: #373F51;
 }
 
-/* line 178, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .delete-button {
   background-color: #F05D5E;
 }
 
-/* line 182, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 .unlike-button {
   background-color: #F05D5E;
 }
 
-/* line 187, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 [class*="fontawesome-"]:before {
   font-family: 'FontAwesome', sans-serif;
   margin-right: 5px;
 }
 
-/* line 192, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .article-icon {
   width: 100px !important;
 }
 
-/* line 196, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .emblem-link {
   text-decoration: none;
   color: #404040;
 }
 
-/* line 201, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 .user-info, .gallerite-info {
   text-align: center;
 }
 
-/* line 205, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 .info-entry {
   background-color: #D6D6D6;
   width: 300px;
@@ -246,12 +253,12 @@ input {
   padding: 5px;
   border-radius: 5px;
 }
-/* line 212, ../sass/screen.scss */
+/* line 218, ../sass/screen.scss */
 .info-entry a {
   color: #404040;
 }
 
-/* line 217, ../sass/screen.scss */
+/* line 223, ../sass/screen.scss */
 .like-user {
   width: 100%;
   background-color: #D6D6D6;
@@ -264,23 +271,23 @@ input {
   border-radius: 5px;
   margin-bottom: 5px;
 }
-/* line 228, ../sass/screen.scss */
+/* line 234, ../sass/screen.scss */
 .like-user img {
   width: 30px;
   height: 30px;
   margin-right: 10px;
 }
 
-/* line 235, ../sass/screen.scss */
+/* line 241, ../sass/screen.scss */
 #explore-image {
   max-width: 300px;
 }
-/* line 237, ../sass/screen.scss */
+/* line 243, ../sass/screen.scss */
 #explore-image:hover {
   cursor: zoom-in;
 }
 
-/* line 242, ../sass/screen.scss */
+/* line 248, ../sass/screen.scss */
 .zoomed-image {
   display: none;
   text-align: center;
@@ -289,7 +296,7 @@ input {
   padding: 20px;
 }
 
-/* line 250, ../sass/screen.scss */
+/* line 256, ../sass/screen.scss */
 .layer {
   display: none;
   position: fixed;
@@ -303,27 +310,27 @@ input {
   padding: 0;
 }
 
-/* line 264, ../sass/screen.scss */
+/* line 270, ../sass/screen.scss */
 .original-image:hover {
   cursor: zoom-out;
 }
 
-/* line 269, ../sass/screen.scss */
+/* line 275, ../sass/screen.scss */
 .stop-scrolling {
   height: 100%;
   overflow-y: hidden;
 }
 
-/* line 274, ../sass/screen.scss */
+/* line 280, ../sass/screen.scss */
 .info-button-wrapper {
   margin-top: 10px;
 }
-/* line 276, ../sass/screen.scss */
+/* line 282, ../sass/screen.scss */
 .info-button-wrapper button {
   width: 120px;
 }
 
-/* line 281, ../sass/screen.scss */
+/* line 287, ../sass/screen.scss */
 .gallerite-delete-button {
   padding: 5px;
   border-radius: 3px;
@@ -331,64 +338,118 @@ input {
   color: white;
   background-color: #F05D5E;
 }
-/* line 287, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .gallerite-delete-button:hover {
   cursor: pointer;
 }
 
-/* line 292, ../sass/screen.scss */
+/* line 298, ../sass/screen.scss */
 #search-div {
   margin-bottom: 20px;
   padding: 0 10px 0 10px;
   display: flex;
   flex-wrap: wrap;
 }
-/* line 297, ../sass/screen.scss */
+/* line 303, ../sass/screen.scss */
 #search-div form {
   margin: 0;
   padding: 0;
   width: 100%;
 }
-/* line 301, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 #search-div form input {
   width: calc(100% - 100px);
 }
 
-/* line 307, ../sass/screen.scss */
+/* line 313, ../sass/screen.scss */
 .footer {
   font-size: 0.8em;
   color: #404040;
   margin-top: 30px;
-  background-color: white;
-  opacity: 0.9;
+  background-color: #E3E3E3;
   padding: 5px;
 }
-/* line 314, ../sass/screen.scss */
+/* line 319, ../sass/screen.scss */
 .footer ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-/* line 320, ../sass/screen.scss */
+/* line 325, ../sass/screen.scss */
 .footer a {
   color: #404040;
 }
 
-/* line 326, ../sass/screen.scss */
+/* line 330, ../sass/screen.scss */
 .bricklayer-column-sizer {
   width: 25%;
 }
 
+/* line 334, ../sass/screen.scss */
+#expand-menu {
+  display: none;
+}
+
+/* line 338, ../sass/screen.scss */
+#drawer {
+  color: white;
+  width: 250px;
+  height: 50%;
+  overflow-y: auto;
+  background-color: black;
+  opacity: 0.85;
+  border: 1px solid gray;
+  position: absolute;
+  transform: translate(-330px, 0);
+  transition: transform 0.3s ease;
+  z-index: 4;
+  padding: 10px;
+  font-size: 0.85em;
+}
+/* line 352, ../sass/screen.scss */
+#drawer a {
+  color: #404040;
+  text-decoration: none;
+}
+/* line 356, ../sass/screen.scss */
+#drawer li {
+  background-color: #E3E3E3;
+  border-radius: 3px;
+  margin-top: 10px;
+  padding: 5px;
+}
+
+/* line 364, ../sass/screen.scss */
+#drawer.open {
+  transform: translate(0, 0);
+}
+
 @media screen and (max-width: 800px) {
-  /* line 333, ../sass/screen.scss */
+  /* line 369, ../sass/screen.scss */
   .bricklayer-column-sizer {
     width: 33.3%;
   }
 }
-@media screen and (max-width: 500px) {
-  /* line 339, ../sass/screen.scss */
+@media screen and (max-width: 570px) {
+  /* line 375, ../sass/screen.scss */
   .bricklayer-column-sizer {
     width: 50%;
+  }
+
+  /* line 378, ../sass/screen.scss */
+  #expand-menu {
+    display: block;
+  }
+
+  /* line 381, ../sass/screen.scss */
+  .button-wrapper {
+    display: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  /* line 387, ../sass/screen.scss */
+  .bricklayer-column-sizer {
+    width: 100%;
   }
 }
