--- a/views/user.ejs
+++ b/views/user.ejs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/stylesheets/screen.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link href="http://weloveiconfonts.com/api/?family=fontawesome" rel="stylesheet">
+	<script src="https://use.fontawesome.com/0e2e583874.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/css-social-buttons/1.2.0/css/zocial.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -84,9 +84,9 @@
 				<div class="likes-section">
 					<p>Likes: <span class="no-of-likes"><%= addedGallerites[gallerite].likedBy.length %></span></p>
 					<% if (user && addedGallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
-					<button class="action like-button" gallerite=<%- JSON.stringify(addedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
+					<button class="action like-button" gallerite=<%- JSON.stringify(addedGallerites[gallerite].serialNumber) %>><i class="fa fa-thumbs-up" aria-hidden="true"></i>Like</button>
 					<% } else if (user && addedGallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
-					<button class="action unlike-button" gallerite=<%- JSON.stringify(addedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
+					<button class="action unlike-button" gallerite=<%- JSON.stringify(addedGallerites[gallerite].serialNumber) %>><i class="fa fa-thumbs-down" aria-hidden="true"></i>Unlike</button>
 					<% } %>
 				</div>
 				<a href="/explore/<%- JSON.stringify(addedGallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
@@ -123,9 +123,9 @@
 				<div class="likes-section">
 					<p>Likes: <span class="no-of-likes"><%= likedGallerites[gallerite].likedBy.length %></span></p>
 					<% if (user && likedGallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
-					<button class="action like-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
+					<button class="action like-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><i class="fa fa-thumbs-up" aria-hidden="true"></i>Like</button>
 					<% } else if (user && likedGallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
-					<button class="action unlike-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
+					<button class="action unlike-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><i class="fa fa-thumbs-down" aria-hidden="true"></i>Unlike</button>
 					<% } %>
 				</div>
 				<a href="/explore/<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
