--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -365,6 +365,10 @@ input {
 	transform: translate(0, 0);
 }
 
+.fa {
+	margin-right: 5px;
+}
+
 @media screen and (max-width: 800px) {
 	.bricklayer-column-sizer {
 		width: 33.3%; 
